--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p class="popup-red-text">You Pay: <span class="popup-green-text" id="youPayAmount"></span></p>
                 <p class="popup-red-text">Profit: <span class="popup-green-text" id="profitAmount"></span></p>
                 <hr>
-                <p>To Buy Gift Card For Now Then Contact/Pay At - <a href="https://wa.me/7009095794" class="popup-text-value">7009095794</a></p>
+                <p>To Buy Gift Card Then Contact At - <a href="https://wa.me/7009095794" class="popup-text-value">Click Here</a></p>
                 <p>To Purchase Bulk <a href="#UpdateSoon" class="popup-text-value">Click Here</a></p>
             </div>
         </div>
