--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="popup-red-text">Profit: <span class="popup-green-text" id="profitAmount"></span></p>
                 <hr>
                 <p>To Buy Gift Card Then Contact At - <a href="https://wa.me/7009095794" class="popup-text-value">Click Here</a></p>
-                <p>To Purchase Bulk <a href="#UpdateSoon" class="popup-text-value">Click Here</a></p>
+                <p>To Purchase Bulk <a href="https://chat.whatsapp.com/BGRo5HKoDXg1fsxXkGKV83" class="popup-text-value">Click Here</a></p>
             </div>
         </div>
     </div>
