--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main class="Content">
         <div class="Tags" id="tagsContainer">
             <button class="TagButton" data-tag="all">All</button>
-            <button class="TagButton" data-tag="1">1</button>
-            <button class="TagButton" data-tag="2">2</button>
+            <button class="TagButton" data-tag="1">E-Commerce</button>
+            <button class="TagButton" data-tag="2">Fasion</button>
         </div>
         <div class="Buttons" id="buttonsContainer"></div>
     </main>
