--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <main class="Content">
         <div class="Tags" id="tagsContainer">
             <button class="TagButton" data-tag="all">All</button>
-            <button class="TagButton" data-tag="1">E-Commerce</button>
-            <button class="TagButton" data-tag="2">Fasion</button>
+            <button class="TagButton" data-tag="E-Commerce">E-Commerce</button>
+            <button class="TagButton" data-tag="Fasion">Fasion</button>
+            <button class="TagButton" data-tag="Food">Food</button>
+            <button class="TagButton" data-tag="Movie">Movie</button>
+            <button class="TagButton" data-tag="Gaming">Gaming</button>
+            <button class="TagButton" data-tag="Trip">Trip</button>
+            <button class="TagButton" data-tag="Other">Other</button>
         </div>
         <div class="Buttons" id="buttonsContainer"></div>
     </main>
