--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,23 +7,16 @@
     <link rel="stylesheet" href="CSS/Structure.css">
     <link rel="stylesheet" href="CSS/index.css">
 </head>
-
 <body>
     <header class="Header">Gift Cards</header>
     <main class="Content">
-        <div class="Tags" id="tagsContainer">
-            <button class="TagButton" data-tag="all">All</button>
-            <button class="TagButton" data-tag="E-Commerce">E-Commerce</button>
-            <button class="TagButton" data-tag="Fasion">Fasion</button>
-            <button class="TagButton" data-tag="Food">Food</button>
-            <button class="TagButton" data-tag="Movie">Movie</button>
-            <button class="TagButton" data-tag="Gaming">Gaming</button>
-            <button class="TagButton" data-tag="Trip">Trip</button>
-            <button class="TagButton" data-tag="Other">Other</button>
-        </div>
+        <div class="Tags" id="tagsContainer"></div>
         <div class="Buttons" id="buttonsContainer"></div>
     </main>
-    <footer class="Footer">Thank You</footer>
+    <footer class="Footer">
+        <h1>Thank You</h1>
+        <h2>Want More Gift Cards ? <a href="https://wa.me/7009095794" class="popup-text-value">Click Here</a> </h2>
+    </footer>
 
     <div id="popup" class="Popup">
         <div class="PopupContent">
@@ -38,14 +30,12 @@
                 <p class="popup-red-text">You Pay: <span class="popup-green-text" id="youPayAmount"></span></p>
                 <p class="popup-red-text">Profit: <span class="popup-green-text" id="profitAmount"></span></p>
                 <hr>
-                <p>To Buy Gift Card For Now Then Contact/Pay At - <a href="https://wa.me/7009095794"
-                        class="popup-text-value">7009095794</a></p>
-                <p>To Purchase Bulk <a href="#UpdateSoon" class="popup-text-value">Click Here</a></p>
+                <p>To Buy Gift Card For Now Then Contact/Pay At - <a href="https://wa.me/7009095794" class="popup-text-value">Click Here</a></p>
+                <p>To Purchase Bulk <a href="https://chat.whatsapp.com/BGRo5HKoDXg1fsxXkGKV83" class="popup-text-value">Click Here</a></p>
             </div>
         </div>
     </div>
 
     <script src="JS/index.js"></script>
 </body>
-
 </html>
